[gd_scene load_steps=7 format=3 uid="uid://dkh8j22thguc3"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_gyj3j"]
[ext_resource type="Script" path="res://Settings.gd" id="2_su7dr"]
[ext_resource type="Script" path="res://3dDisplays.gd" id="3_xjosb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1yjrx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qwbfl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y3gr0"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gyj3j")

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_su7dr")

[node name="3dDisplays" type="Control" parent="Settings"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_xjosb")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Settings/3dDisplays"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21875
anchor_top = 0.262963
anchor_right = 0.78125
anchor_bottom = 0.737037
offset_left = 411.25
offset_top = 273.481
offset_right = 1468.75
offset_bottom = 766.518
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="Settings/3dDisplays/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1080, 512)
render_target_update_mode = 0

[node name="Camera3D" type="Camera3D" parent="Settings/3dDisplays/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="playerPrev" type="CSGSphere3D" parent="Settings/3dDisplays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -3)
material = SubResource("StandardMaterial3D_1yjrx")

[node name="ballPrev" type="CSGSphere3D" parent="Settings/3dDisplays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -3)
material = SubResource("StandardMaterial3D_qwbfl")

[node name="bg" type="CSGBox3D" parent="Settings/3dDisplays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.16784)
layers = 3
size = Vector3(15, 10, 0.1)
material = SubResource("StandardMaterial3D_y3gr0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Settings/3dDisplays"]
light_energy = 0.5

[node name="Back" type="Button" parent="Settings/3dDisplays"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 31.0
text = "Back"

[node name="Player" type="Control" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 540.0
offset_top = -258.0
offset_right = 770.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerBallColorWheel" type="ColorPickerButton" parent="Settings/Player"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -26.5
offset_right = 32.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Settings/Player/PlayerBallColorWheel"]
layout_mode = 0
offset_left = -58.0
offset_top = -32.0
offset_right = 121.0
offset_bottom = -6.0
text = "Player Ball Color Wheel"

[node name="Metallic" type="HSlider" parent="Settings/Player"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -37.0
offset_right = 36.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.1

[node name="Rough" type="HSlider" parent="Settings/Player"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = 3.0
offset_right = 36.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.1

[node name="ChaosBall" type="Control" parent="Settings"]
layout_mode = 3
anchors_preset = 0
offset_left = 169.0
offset_top = 221.0
offset_right = 469.0
offset_bottom = 521.0

[node name="ChaosBallColorWheel" type="ColorPickerButton" parent="Settings/ChaosBall"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -26.5
offset_right = 32.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Settings/ChaosBall/ChaosBallColorWheel"]
layout_mode = 0
offset_left = -53.0
offset_top = -33.5
offset_right = 125.0
offset_bottom = -7.5
text = "Chaos Ball Color Wheel"

[node name="Metallic2" type="HSlider" parent="Settings/ChaosBall"]
layout_mode = 0
offset_left = 114.0
offset_top = 200.0
offset_right = 184.0
offset_bottom = 240.0

[node name="Rough2" type="HSlider" parent="Settings/ChaosBall"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -60.0
offset_right = 36.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.1

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Quit" type="Button" parent="Main"]
process_priority = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -375.0
offset_right = 21.0
offset_bottom = -344.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[node name="Play" type="Button" parent="Main"]
process_priority = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -15.5
offset_right = 33.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "   Play   "

[node name="Settings_Button" type="Button" parent="Main"]
process_priority = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 68.0
offset_right = 35.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 923.0
offset_top = 453.0
offset_right = 1009.0
offset_bottom = 482.0
text = "CrazyBall"

[connection signal="pressed" from="Settings/3dDisplays/Back" to="." method="_on_back_pressed"]
[connection signal="color_changed" from="Settings/Player/PlayerBallColorWheel" to="Settings" method="_on_player_ball_color_wheel_color_changed"]
[connection signal="value_changed" from="Settings/Player/Metallic" to="Settings" method="_on_metallic_value_changed"]
[connection signal="value_changed" from="Settings/Player/Rough" to="Settings" method="_on_rough_value_changed"]
[connection signal="color_changed" from="Settings/ChaosBall/ChaosBallColorWheel" to="Settings" method="_on_chaos_ball_color_wheel_color_changed"]
[connection signal="value_changed" from="Settings/ChaosBall/Metallic2" to="Settings" method="_on_metallic_2_value_changed"]
[connection signal="value_changed" from="Settings/ChaosBall/Rough2" to="Settings" method="_on_rough_2_value_changed"]
[connection signal="pressed" from="Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Main/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/Settings_Button" to="." method="_on_settings_button_pressed"]
